--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 </section>
 <section id="materi" class="section materi-section">
     <h2 class="animate-element">Materi Pembelajaran</h2>
+    
     <div class="materi-grid materi-grid-3-2 animate-element">
         <div class="materi-card animate-element">
             <h3 class="animate-element">Pengertian TMII</h3>
@@ -128,19 +129,72 @@
         <a href="lkpd4.docx" class="lkpd-card animate-element" download>LKPD 4</a>
     </div>
     <h3 class="animate-element">Mata Pelajaran</h3>
-    <div class="subject-grid animate-element">
-      <div class="subject-card animate-element">
-          <h4 class="animate-element">Rekayasa Perangkat Lunak</h4>
-          <p class="animate-element">
-            Saya membuat website ini dengan HTML, CSS, dan JavaScript dalam bentuk one-page website. Saya banyak mengambil inspirasi dari berbagai website seperti Netflix, Pinterest, dan lainnya, serta sedikit bantuan AI. Selain itu, saya juga menerapkan banyak animasi dan kombinasi gaya CSS agar tampilan lebih menarik dan interaktif.</p>
+    <section id="rpl" class="section rpl-section">
+      <h2 class="animate-element">Rekayasa Perangkat Lunak</h2>
+      <div class="rpl-container animate-element">
+          <div class="rpl-card animate-element">
+              <h3 class="animate-element">Tentang RPL</h3>
+              <p class="animate-element">
+                  Saya membuat website ini dengan HTML, CSS, dan JavaScript dalam bentuk one-page website. Saya banyak mengambil inspirasi dari berbagai website seperti Netflix, Pinterest, dan lainnya, serta sedikit bantuan AI. Selain itu, saya juga menerapkan banyak animasi dan kombinasi gaya CSS agar tampilan lebih menarik dan interaktif.
+              </p>
+          </div>
       </div>
-      <div class="subject-card animate-element">
-          <h4 class="animate-element">Informatika</h4>
-          <p class="animate-element">Website ini saya hosting menggunakan layanan gratis dari Vercel dan GitHub. Kodenya saya upload ke GitHub, lalu dihubungkan ke Vercel untuk proses deployment otomatis. Vercel menyediakan domain gratis dan memudahkan update hanya dengan melakukan push ke repositori GitHub. Cara singkatnya: buat akun GitHub & Vercel, upload project ke GitHub, lalu sambungkan repositori tersebut ke Vercel untuk langsung online.</p>
-      </div>
-</div> <!-- Penutup div subject-grid -->
-<section id="mulok-perbandingan" class="mulok-grid-section">
-  <h2 class="animate-element">Perbandingan Budaya Daerah</h2>
+  </section>
+  
+  <section id="informatika" class="section informatika-section">
+    <h2 class="animate-element">Informatika</h2>
+    <div class="informatika-container animate-element">
+        <div class="informatika-card animate-element">
+            <h3 class="animate-element">Tentang Informatika</h3>
+            <p class="animate-element">
+                Website ini saya hosting menggunakan layanan gratis dari Vercel dan GitHub. Kodenya saya upload ke GitHub, lalu dihubungkan ke Vercel untuk proses deployment otomatis. Vercel menyediakan domain gratis dan memudahkan update hanya dengan melakukan push ke repositori GitHub. Cara singkatnya: buat akun GitHub & Vercel, upload project ke GitHub, lalu sambungkan repositori tersebut ke Vercel untuk langsung online.
+            </p>
+        </div>
+        <div class="tutorial-container animate-element">
+            <h2 class="animate-element">Tutorial Hosting dari GitHub ke Vercel</h2>
+            <ul class="tutorial-steps">
+              <li>
+                  <h3>Langkah 1: Buat Akun GitHub</h3>
+                  <p>Daftar di <a href="https://github.com" target="_blank">GitHub</a> dan buat akun baru.</p>
+                  <img src="tutor/unknown_2025.06.04-20.40.png" alt="Langkah 1" class="tutorial-image">
+              </li>
+              <li>
+                  <h3>Langkah 2: Buat Repositori Baru</h3>
+                  <p>Buat repositori baru untuk proyek Anda di GitHub.</p>
+                  <img src="tutor/unknown_2025.06.04-20.40_1.png" alt="Langkah 2" class="tutorial-image">
+              </li>
+              <li>
+                  <h3>Langkah 3: Upload Kode Anda</h3>
+                  <p>Upload file proyek Anda ke repositori yang telah dibuat.</p>
+                  <img src="tutor/unknown_2025.06.04-20.41.png" alt="Langkah 3" class="tutorial-image">
+              </li>
+              <li>
+                  <h3>Langkah 4: Buat Akun Vercel</h3>
+                  <p>Daftar di <a href="https://vercel.com" target="_blank">Vercel</a> dan buat akun baru.</p>
+                  <img src="tutor/unknown_2025.06.04-20.41_1.png" alt="Langkah 4" class="tutorial-image">
+              </li>
+              <li>
+                  <h3>Langkah 5: Hubungkan GitHub dengan Vercel</h3>
+                  <p>Di Vercel, pilih opsi untuk menghubungkan akun GitHub Anda.</p>
+                  <img src="tutor/unknown_2025.06.04-20.41_2.png" alt="Langkah 5" class="tutorial-image">
+              </li>
+              <li>
+                  <h3>Langkah 6: Deploy Proyek Anda</h3>
+                  <p>Pilih repositori yang ingin Anda deploy dan klik tombol deploy.</p>
+                  <img src="tutor/unknown_2025.06.04-20.42.png" alt="Langkah 6" class="tutorial-image">
+              </li>
+              <li>
+                  <h3>Langkah 7: Selesai!</h3>
+                  <p>Proyek Anda sekarang sudah online! Anda dapat mengaksesnya melalui URL yang diberikan oleh Vercel.</p>
+                  <img src="tutor/unknown_2025.06.04-20.42_1.png" alt="Langkah 7" class="tutorial-image">
+              </li>
+          </ul>
+        </div>
+    </div>
+</section>
+<section id="mulok" class="section mulok-section">
+  <h2 class="animate-element">Muatan Lokal</h2>
+
   <p class="section-description animate-element">Berikut adalah perbandingan budaya antara Betawi, Kalimantan Timur, dan Kalimantan Selatan dari berbagai aspek:</p>
 
   <div class="mulok-grid-table animate-element">
@@ -278,12 +332,160 @@
         
     </div>
 </section>
+<section id="seni-musik" class="section seni-musik-section">
+  <h2 class="animate-element">Pelajaran Seni Musik</h2>
+  <div class="musik-gallery animate-element">
+    <!-- Kartu Gambar Alat Musik -->
+    <div class="musik-card animate-element">
+      <img src="senmus/Picture1.png" alt="Gong Banjar" class="musik-image" />
+      <div class="musik-overlay"><p>Gong Banjar</p></div>
+    </div>
+    <div class="musik-card animate-element">
+      <img src="senmus/Picture2.png" alt="Gendang Banjar" class="musik-image" />
+      <div class="musik-overlay"><p>Gendang Banjar</p></div>
+    </div>
+    <div class="musik-card animate-element">
+      <img src="senmus/Picture3.png" alt="Gambang Banjar" class="musik-image" />
+      <div class="musik-overlay"><p>Gambang Banjar</p></div>
+    </div>
+    <div class="musik-card animate-element">
+      <img src="senmus/Picture4.png" alt="Kecapi Banjar" class="musik-image" />
+      <div class="musik-overlay"><p>Kecapi Banjar</p></div>
+    </div>
+    <div class="musik-card animate-element">
+      <img src="senmus/Picture5.png" alt="Tarbang" class="musik-image" />
+      <div class="musik-overlay"><p>Tarbang</p></div>
+    </div>
+    <div class="musik-card animate-element">
+      <img src="senmus/Picture6.png" alt="Bonang" class="musik-image" />
+      <div class="musik-overlay"><p>Bonang</p></div>
+    </div>
+    <div class="musik-card animate-element">
+      <img src="senmus/Picture7.png" alt="Gamelan Banjar" class="musik-image" />
+      <div class="musik-overlay"><p>Gamelan Banjar</p></div>
+    </div>
+  </div>
+  
+  <!-- Deskripsi Lengkap Tiap Alat Musik -->
+  <div class="musik-description animate-element">
+    <h3>Deskripsi & Analisis Alat Musik Tradisional Banjar</h3>
+  
+    <div class="alat-musik-detail">
+      <h4>1. Gong Banjar</h4>
+      <p><strong>Observasi:</strong> Berbentuk bundar besar, terbuat dari logam dengan tonjolan di tengah.</p>
+      <p><strong>Bahan:</strong> Campuran tembaga dan perunggu.</p>
+      <p><strong>Cara Membunyikan:</strong> Dipukul dengan alat pemukul besar berlapis kain.</p>
+      <p><strong>Cara Memainkan:</strong> Dipukul mengikuti ritme dalam ansambel gamelan.</p>
+      <p><strong>Refleksi:</strong> Gong menciptakan suasana khidmat, menandai akhir frase musik dalam pertunjukan tradisional.</p>
+    </div>
+  
+    <div class="alat-musik-detail">
+      <h4>2. Gendang Banjar</h4>
+      <p><strong>Observasi:</strong> Bentuk silinder dengan dua sisi membran.</p>
+      <p><strong>Bahan:</strong> Kayu dan kulit binatang (biasanya kambing atau sapi).</p>
+      <p><strong>Cara Membunyikan:</strong> Dipukul menggunakan tangan.</p>
+      <p><strong>Cara Memainkan:</strong> Memberi ritme dalam pertunjukan musik tradisional atau tari-tarian daerah.</p>
+      <p><strong>Refleksi:</strong> Irama gendang menghidupkan dinamika gerakan tari dan semangat dalam upacara adat.</p>
+    </div>
+  
+    <div class="alat-musik-detail">
+      <h4>3. Gambang Banjar</h4>
+      <p><strong>Observasi:</strong> Bentuk seperti xylophone dengan bilah-bilah kayu sejajar.</p>
+      <p><strong>Bahan:</strong> Kayu berkualitas seperti ulin atau kayu keras lainnya.</p>
+      <p><strong>Cara Membunyikan:</strong> Dipukul dengan dua stik kecil.</p>
+      <p><strong>Cara Memainkan:</strong> Dimainkan dengan cepat mengikuti pola melodi dalam musik Banjar.</p>
+      <p><strong>Refleksi:</strong> Bunyi khas gambang sangat kental dengan suasana tradisional Kalimantan.</p>
+    </div>
+  
+    <div class="alat-musik-detail">
+      <h4>4. Kecapi Banjar</h4>
+      <p><strong>Observasi:</strong> Berbentuk memanjang seperti perahu kecil, memiliki senar.</p>
+      <p><strong>Bahan:</strong> Kayu ringan dan senar logam atau nilon.</p>
+      <p><strong>Cara Membunyikan:</strong> Dipetik menggunakan jari.</p>
+      <p><strong>Cara Memainkan:</strong> Biasanya dimainkan sebagai pengiring nyanyian tradisional.</p>
+      <p><strong>Refleksi:</strong> Nada lembut kecapi menenangkan dan mendalam, cocok untuk lagu-lagu daerah yang emosional.</p>
+    </div>
+  
+    <div class="alat-musik-detail">
+      <h4>5. Tarbang</h4>
+      <p><strong>Observasi:</strong> Berbentuk bundar dan pipih, seperti rebana besar.</p>
+      <p><strong>Bahan:</strong> Kayu dan kulit.</p>
+      <p><strong>Cara Membunyikan:</strong> Dipukul dengan tangan langsung.</p>
+      <p><strong>Cara Memainkan:</strong> Sebagai alat utama dalam musik pengiring zikir atau selawat.</p>
+      <p><strong>Refleksi:</strong> Tarbang mencerminkan perpaduan tradisi lokal dan pengaruh Islam dalam budaya Banjar.</p>
+    </div>
+  
+    <div class="alat-musik-detail">
+      <h4>6. Bonang</h4>
+      <p><strong>Observasi:</strong> Terdiri dari beberapa gong kecil berjajar, diletakkan di atas tali atau dudukan.</p>
+      <p><strong>Bahan:</strong> Logam perunggu atau tembaga.</p>
+      <p><strong>Cara Membunyikan:</strong> Dipukul dengan stik kecil berselubung kain.</p>
+      <p><strong>Cara Memainkan:</strong> Melodi utama atau pengisi dalam komposisi gamelan.</p>
+      <p><strong>Refleksi:</strong> Bonang memiliki suara lembut namun tajam, menambah keindahan harmoni gamelan Banjar.</p>
+    </div>
+  
+    <div class="alat-musik-detail">
+      <h4>7. Gamelan Banjar</h4>
+      <p><strong>Observasi:</strong> Satu set alat musik seperti gong, bonang, saron, dan kendang.</p>
+      <p><strong>Bahan:</strong> Campuran logam, kayu, dan kulit.</p>
+      <p><strong>Cara Membunyikan:</strong> Dipukul atau digesek tergantung instrumennya.</p>
+      <p><strong>Cara Memainkan:</strong> Dimainkan secara berkelompok dalam ansambel musik.</p>
+      <p><strong>Refleksi:</strong> Gamelan mencerminkan kekayaan budaya dan keharmonisan dalam kehidupan masyarakat Banjar.</p>
+    </div>
+  </div>
+  
+</section>
+<!-- Section: Luas Ruangan Tengah Rumah Baajang -->
+<section class="rumah-matematika animate-element">
+  <h3>Menghitung Luas Ruangan Tengah Rumah Baajang</h3>
+  <p>
+    Outing class tidak hanya memberikan pengalaman langsung mengenai budaya dan sejarah, tetapi juga membuka peluang untuk menerapkan konsep akademik—seperti matematika. 
+    Di Anjungan Kalimantan Selatan, kami mengamati ruang tengah Rumah Baajang, rumah adat khas suku Banjar, yang berbentuk mendekati persegi panjang.
+  </p>
+
+  <div class="rumah-math-card">
+    <h4>🔢 Perhitungan Matematis</h4>
+    <p>
+      Misalkan lebar ruangan adalah <strong>x</strong>, maka panjangnya adalah <strong>x + 4,5</strong>.
+      Berdasarkan informasi bahwa luasnya adalah 243 m²:
+    </p>
+    <pre>
+Luas = panjang × lebar  
+243 = x(x + 4,5)  
+243 = x² + 4,5x  
+Kalikan dengan 2:
+2x² + 9x - 486 = 0  
+(2x − 27)(x + 18) = 0  
+
+x = 13,5 → panjang = 18  
+    </pre>
+    <p><strong>Jadi: Lebar = 13,5 meter, Panjang = 18 meter</strong></p>
+  </div>
+
+  <div class="rumah-budaya-card">
+    <h4>🌿 Analisis Budaya</h4>
+    <p>
+      Ruangan tengah Rumah Baajang berfungsi sebagai ruang utama menerima tamu dan menggelar acara adat seperti selamatan dan musyawarah. Letaknya yang sentral mencerminkan keterbukaan dan nilai kekeluargaan masyarakat Banjar.
+    </p>
+    <p>
+      Ukiran motif <em>“daun jaruju”</em> dan <em>“antakusuma”</em> yang ditemukan di ruangan ini melambangkan ketahanan dan harapan, sedangkan bahan kayu ulin mencerminkan kekuatan karakter masyarakat Banjar.
+    </p>
+  </div>
+
+  <div class="rumah-image-box">
+    <img src="mtk/Picture8.png" alt="Ruang Tengah Rumah Baajang" class="rumah-image">
+    <img src="mtk/Picture9.png" alt="Interior Rumah Baajang" class="rumah-image">
+  </div>
+</section>
+
+
 <section id="galeri" class="section galeri-section">
   <h2 class="animate-element">Galeri</h2>
   <p class="galeri-desc animate-element">
       Berikut adalah kumpulan foto yang menampilkan berbagai aktivitas dan fasilitas pemadam kebakaran di Kalimantan Selatan dan Kalimantan Timur.
   </p>
 </section>
+
 
 <section id="galeri-pemadam-kalsel" class="section galeri-pemadam-section">
   <h2 class="animate-element">Museum Pemadam</h2>
