--- a/index.html
+++ b/index.html
@@ -191,6 +191,34 @@
           </ul>
         </div>
     </div>
+    <div>
+      <h2 class="animate-element">Literasi Digital</h2>
+       <ul class="tutorial-steps">
+              <li>
+                  <h3>Rumah Lamin</h3>
+                  <p>Rumah Lamin merupakan ikon utama Anjungan Kalimantan Timur. Rumah panjang ini adalah representasi dari arsitektur tradisional suku Dayak Kenyah. Dibangun tanpa paku, struktur rumah ini mengandalkan pasak kayu dan tali rotan, mencerminkan kearifan lokal dalam memanfaatkan sumber daya alam secara berkelanjutan .
+                    <br>Rumah Lamin dapat menampung hingga 200 orang, mencerminkan kehidupan komunal masyarakat Dayak. Ornamen khas seperti burung Enggang (simbol kebangsawanan), naga (kesaktian), cumi-cumi (kerakyatan), dan topeng (kedamaian) menghiasi bangunan ini, menambah nilai estetika sekaligus makna filosofis .
+                  </p>
+                  <img src="it/Anjungan-Kalimantan-Timur-scaled-1500x1000.jpg" alt="Langkah 1" class="tutorial-image">
+              </li>
+              <li>
+                  <h3>Koleksi Budaya</h3>
+                  <p>Di dalam Rumah Lamin, pengunjung dapat menemukan berbagai artefak budaya seperti Bening Aban (alat gendong anak), pakaian adat, perhiasan raja, dan lukisan budaya khas Dayak. Pameran ini memberikan wawasan mendalam tentang kehidupan dan tradisi masyarakat Kalimantan Timur .</p>
+                  <img src="kaltim/IMG_6409.JPG" alt="Langkah 2" class="tutorial-image">
+              </li>
+              <li>
+                  <h3>Kegiatan Budaya</h3>
+                  <p>Anjungan Kalimantan Timur aktif menyelenggarakan berbagai kegiatan budaya. Salah satunya adalah Workshop Seni dan Budaya yang diadakan pada 29 Februari 2024, menampilkan tarian tradisional seperti Tari Gantar dan Tari Jepen, serta memperkenalkan alat musik Sape kepada siswa-siswi dari Jakarta Intercultural School dan SD Kupu-Kupu .</p>
+                  <img src="it/berita-workshop-seni-dan-budaya-anjungan-kalimantan-timur-25-l.png.crdownload" alt="Langkah 4" class="tutorial-image">
+              </li>
+              <li>
+                  <h3>Pengalaman Pribadi</h3>
+                  <p>Saat mengunjungi Anjungan Kalimantan Timur, suasana yang tenang dan arsitektur yang megah memberikan pengalaman yang mendalam. Interaksi dengan pemandu yang ramah dan informatif memperkaya pemahaman tentang budaya Kalimantan Timur. Melihat langsung ornamen-ornamen khas dan mendengarkan cerita di baliknya memberikan apresiasi lebih terhadap kekayaan budaya Indonesia.
+
+</p>
+                  <img src="it/galeri-rumah-lamin-40-l.jpg" alt="Langkah 5" class="tutorial-image">
+       </ul>
+    </div>
 </section>
 <section id="mulok" class="section mulok-section">
   <h2 class="animate-element">Muatan Lokal</h2>
