--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
 <section id="lkpd" class="section lkpd-section">
     <h2 class="animate-element">LKPD</h2>
     <div class="lkpd-grid animate-element">
-        <a href="lkpd1.docx" class="lkpd-card animate-element" download>LKPD 1</a>
-        <a href="lkpd2.docx" class="lkpd-card animate-element" download>LKPD 2</a>
-        <a href="lkpd3.docx" class="lkpd-card animate-element" download>LKPD 3</a>
-        <a href="lkpd4.docx" class="lkpd-card animate-element" download>LKPD 4</a>
+        <a href="word/(josh)PROJEK_SUMATIF_AKHIR_SEMESTER_GENAP_10_MP_TAHUN_PELAJARAN_2024[1][2][1][1].docx" class="lkpd-card animate-element" download>LKPD 1</a>
+        <a href="word/LKPD ekalll.docx" class="lkpd-card animate-element" download>LKPD 2</a>
+        <a href="word/LKPD Firdaus Ramdan.docx.pdf" class="lkpd-card animate-element" download>LKPD 3</a>
+        <a href="word/" class="lkpd-card animate-element" download>LKPD 4</a>
     </div>
     <h3 class="animate-element">Mata Pelajaran</h3>
     <section id="rpl" class="section rpl-section">
@@ -193,12 +193,19 @@
     </div>
     <div>
       <h2 class="animate-element">Literasi Digital</h2>
+      <p class="section-description animate-element">Dalam rangka memperluas wawasan budaya sekaligus mengembangkan kemampuan literasi digital, kami melakukan kunjungan langsung ke Anjungan Kalimantan Timur di Taman Mini Indonesia Indah (TMII). Kegiatan ini bertujuan untuk mengamati dan memahami lebih dalam mengenai kekayaan budaya, arsitektur tradisional, serta nilai-nilai sosial masyarakat Kalimantan Timur yang direpresentasikan melalui berbagai bangunan dan ornamen di anjungan tersebut.
+
+Selain dari observasi langsung di lapangan, kami juga memperkaya informasi melalui hasil diskusi dengan pemandu setempat serta menelusuri referensi daring resmi seperti situs TMII dan Pemerintah Provinsi Kalimantan Timur.
+
+</p>
        <ul class="tutorial-steps">
               <li>
                   <h3>Rumah Lamin</h3>
-                  <p>Rumah Lamin merupakan ikon utama Anjungan Kalimantan Timur. Rumah panjang ini adalah representasi dari arsitektur tradisional suku Dayak Kenyah. Dibangun tanpa paku, struktur rumah ini mengandalkan pasak kayu dan tali rotan, mencerminkan kearifan lokal dalam memanfaatkan sumber daya alam secara berkelanjutan .
-                    <br>Rumah Lamin dapat menampung hingga 200 orang, mencerminkan kehidupan komunal masyarakat Dayak. Ornamen khas seperti burung Enggang (simbol kebangsawanan), naga (kesaktian), cumi-cumi (kerakyatan), dan topeng (kedamaian) menghiasi bangunan ini, menambah nilai estetika sekaligus makna filosofis .
+                  <p>Bangunan yang paling mencolok di Anjungan Kalimantan Timur adalah Rumah Lamin, yang menjadi ikon utama dan sekaligus simbol budaya masyarakat Dayak. Rumah Lamin bukan sekadar rumah adat—melainkan gambaran utuh dari kehidupan sosial, arsitektur tradisional, serta nilai gotong royong yang kuat di tengah masyarakat Dayak Kenyah.
+                  <br>Rumah ini dibangun tanpa menggunakan paku logam, melainkan hanya mengandalkan sambungan kayu dan ikatan rotan. Kami berdiskusi cukup lama dengan pemandu mengenai teknik pembangunan ini, yang ternyata mencerminkan kearifan lokal dan kedekatan masyarakat dengan alam. Panjang rumah Lamin bisa mencapai lebih dari 40 meter, dan dapat menampung puluhan hingga ratusan orang. Ini menunjukkan bagaimana kehidupan masyarakat Dayak sangat menjunjung tinggi nilai kebersamaan.
+                  <br>Di bagian dinding dan tiang rumah, terdapat ukiran dan motif khas seperti burung Enggang, naga, dan topeng. Simbol-simbol ini ternyata bukan sekadar hiasan—masing-masing memiliki makna filosofi yang mendalam, seperti kebangsawanan, kekuatan, serta harapan akan kedamaian. Menariknya, makna ini kami peroleh langsung dari narasi pemandu yang menjelaskan dengan antusias.
                   </p>
+
                   <img src="it/Anjungan-Kalimantan-Timur-scaled-1500x1000.jpg" alt="Langkah 1" class="tutorial-image">
               </li>
               <li>
