--- a/index.html
+++ b/index.html
@@ -19,15 +19,11 @@
   </div>
 
   <!-- Video Background hanya di bagian Home -->
-  <header id="home" class="video-section">
-      <video autoplay muted loop id="bg-video">
-          <source src="saveinsta.cc_1080p-tiap-sudut-tmii-sudahbedacerita-buat-semua-orang.mp4" type="video/mp4">
-          Browser Anda tidak mendukung video.
-      </video>
+  <header id="home" class="slider-background">
       <div class="overlay">
-          <h1>Selamat Datang di Website</h1>
-          <p class="subtitle">Kelompok V</p>
-      </div>
+        <h1>Selamat Datang di Website</h1>
+        <p class="subtitle">Kelompok V</p>
+    </div>
   </header>
 
   <!-- Navbar (pure CSS hamburger menu) -->
